# romansalates

./: .gitignore  Cargo.toml  Iy.lua  README.md  dex.lua  remotespy.lua  saveins.lua  saveinstance.lua
crates/bytecode_decompiler/: Cargo.toml
crates/bytecode_decompiler/src/: bytecode.rs  cli.rs  decompile.rs  disasm.rs  error.rs  lib.rs  main.rs  opcode.rs  opcode_table.rs  parser.rs  utils.rs  validate.rs
crates/bytecode_decompiler/tests/: basic.rs  corpus.rs  golden.rs
crates/bytecode_decompiler/tests/fixtures/: README.md  export_manifest.json  manifest.json
scripts/: export_bytecode_fixtures.lua
